fix widget box overlap

--- a/src/stylesheets/components/_widget.scss
+++ b/src/stylesheets/components/_widget.scss
@@ -47,6 +47,7 @@
 
     &--close {
       box-shadow: none;
+      height: min-content;
     }
   }
 
